public/stylesheets/heypal.less
// HELPERS
// -----------

.hidden{
  display: none !important;
}

.textCenter() {
  text-align: center;
}

.textRight() {
  text-align: right;
}

.textLeft() {
  text-align: left;
}

.floatRight() {
  float: right;
}

.floatLeft() {
  float: left;
}

.edgeLeft() {
  margin-left: 0;
}

.imageBorder() {
  border: 1px solid #ddd;
  padding: 2px;
  .border-radius(4px);
  .box-shadow(0 1px 1px rgba(0,0,0,.075));
}

.thumb{
  .imageBorder();
  background: #fff;
  padding: 9px;
  
  img{
    display: block;
  }
}


.reset-width {
  width: auto;
}

.reset-float {
  float: none;
}

.align-images img {
  vertical-align: middle;
}

.align-right {
  text-align: right;
}

.align-center {
  .textCenter();
}

.float-right {
  .floatRight();
}

.float-left {
  .floatLeft();
}

section {
  margin-bottom: @baseline;
}

.center {
  .textCenter();
}

.edge-left {
  .edgeLeft();
}

.span-one-third     { width: 33%; }
.span-one-fourth    { width: 22%; }
.span-two-thirds    { width: 66%; }
.offset-one-third   { margin-left: 33%; }
.offset-two-thirds  { margin-left: 66%; }

aside .row, aside .media-grid, .aside .row, .aside .media-grid {
  .clearfix();
  margin-left: 0
}

.help-inline {
  color: @grayDark;
}

// Sup
// ---------
.sup{
  color: @grayLight;
  font-size: @smallfont;
}

a.sup {
  color: @linkColor;
  font-size: @smallfont;
}

// Layout

header{
  background: #fff;
  //padding-top: 10px;
  //position: fixed;
  width: 100%;
  top: 0;
  z-index: 999;
}

body {
  padding: 10px 0 10px;
}

.container > footer p {
  text-align: center; 
}

.header .pull-right {
  float: right;
}

/* The white background content wrapper */
.content {
  background-color: #fff;
  padding: 20px 0;
}

/* Give a quick and non-cross-browser friendly divider */
.content aside, .content .aside {
  margin-left: 5px;
  padding-left: 14px;
  border-left: 1px solid #eee;
}

label.for-checkbox {
  float:none;
}

// Header
// ---------

.header {
  .user_box {
    
    .user_name {
      font-weight: bold;
      font-size: 1.2em;
      color: @grayDark;
      .textRight;
      .floatRight;
    }

    .small, .small a {
      font-weight: normal;
      font-size: 0.9em;
      color: @grayLight;
    }

    .links {
      text-align:right
    }
  }

  .preference {
    cursor:pointer;

    span.edit-icon {
     height:13px;
      width:13px;
      display:inline-block;
      background: transparent url(../images/icon.pencil.png) 0 0;
    }
  }
}


//
.topbar.sticky{
  left: 0;
  position: fixed;
  top: 0;
  width: 100%;
}

// Announce
// ----------

.announce {
  margin: 0 0 @baseline;
  padding: 10px 14px;
  line-height: 2em;
  #gradient > .vertical(#ffffff, #f5f5f5);
  border: 1px solid #ddd;
  .textCenter();
  .border-radius(3px);
  .box-shadow(inset 0 1px 0 @white);
  li {
    display: inline;
    text-shadow: 0 1px 0 @white;
  }
  .divider {
    padding: 0 5px;
    color: @grayLight;
  }
  a {
  }
  .active a {
    color: @grayDark;
  }

  h2 {
    font-size: 16px;
    line-height: 1em;
  }
}

// Label (overrides)
// ---------

.label {
  font-size: 10px;
  padding: 2px 5px;
  font-weight: normal;
  &.new { background-color:  darken(@blue, 25%) }
  &.like_new   { background-color: @blue }
  &.nearby     { background-color: @green; }
  &.notice     { background-color: darken(@blue, 25%); }
}


// Form Overrides
// ----------

label {
  padding-top: 6px;
  font-size: @basefont;
  line-height: @baseline;
  float: left;
  width: 200px;
  text-align: left;
  color: @grayDark;
}

form .input {
  display: block;
  clear: left;
  margin: 10px 10px; 
}

select {
  width: auto;
}

.input-append {
  p {
    float: left;
    border: 1px solid #CCC;
    .border-radius(0 3px 3px 0);
    height: 28px;
    line-height: 28px;
    margin-right: -2px;
    padding-left: 5px;
    padding-right: 2px;
    font-size: 12px;
  }
}
.active-photo {
  background: @grayLight;
  padding: 20px 40px;
}
.active-label {
  margin: 10px;
}
.active-label button {
  padding: 5px 10px;
}
.inline-edit-hover {
  background: none;
  width: auto;
  text-decoration: underline;
}

p.help-inline {
  margin-left: 200px;
}

form div.required label:after {
  content: " *";
}

// Item
// ----------

.item-detail {

  .row {

  }
  .span2 {
    // .edgeLeft();
  }

  .image {
    border:1px solid @grayLight;
    padding: 10px;
    
    img{ 
      display: block; 
    }
  }

  h1 {
    font-size: 26px;
    line-height: 1em;
    margin-bottom: 5px;
  }

  .labels {
   margin-bottom: @baseline;
  }

  .description {
  }

  .environmental {
  }

  .location {

  }

 

}

.pal {
  .textCenter();
  .avatar {

  }

  .name {

  }

  .scores img {
    vertical-align: bottom;
  }
}


.environmental {    
  .gray {
    color: @grayLight;
    margin-right: 5px;
  }
  .val {
    font-size: 1.2em;
    font-weight: bold;
  }
  img {
    vertical-align: bottom;
  }
}


.prices {
  .price {
    .textRight();
     margin-bottom: @baseline; 
    .type {
      color: @grayLight;
      font-size: 11px;
      font-style: italic;
      font-weight: normal;
    }
    .amount {
      font-weight: bold;
      font-size: 18px;
      cursor: pointer;

    }
    .description {
      .textLeft();
    }
    .image {
      .floatLeft();
    }
  }
}
/* ... */

